# GameOfLife

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  GameOfLife.cpp  GameOfLifeTest.cpp  README.md
